# esplay-audio-player

./: CMakeLists.txt  README.md
.cache/clangd/index/: AnimatedGIF.h.DDEE19A8424C3AFF.idx  EVE_commands.c.055C5F2059272902.idx  EVE_supplemental.c.26A906A294CAA88C.idx  animimg001.c.AD28EAAF5A9F50FC.idx  animimg002.c.A0012EFA9D86E282.idx  animimg003.c.0EA8D29CA3403261.idx  app_context.c.3C8FF034A618BF01.idx  app_context.h.A08B6D689825602A.idx  assembly.h.D4CBC126A4B7EAA3.idx  audio.c.FB949F959ADA3CAC.idx  audio.h.B3ED7B85D37A0CEA.idx  audio_decode_types.h.F02101480C732995.idx  audio_log.h.61EAD8E3FB6475FC.idx  audio_mp3.cpp.E63E1586C7BD022B.idx  audio_mp3.h.7ED7B9F287ECA004.idx  audio_player.cpp.09CF27437AE867A5.idx  audio_player.h.F8DD62685E0D1046.idx  audio_wav.cpp.A49A0FCF42DCE160.idx  (+1260 more)
components/acodecs/: CMakeLists.txt
components/acodecs/include/: stb_vorbis.h
components/acodecs/src/gme/gme/: Effects_Buffer.cpp  Nes_Oscs.cpp  Spc_Dsp.cpp  gme.cpp
components/acodecs/src/xmplite/: load.c
components/acodecs/src/xmplite/loaders/: xm_load.c
components/hal-driver/: CMakeLists.txt  audio.c  idf_component.yml  keypad.c  lcd.c  sdcard.c
components/hal-driver/include/: audio.h  hwconfig.h  keypad.h  lcd.h  sdcard.h
main/: CMakeLists.txt  app_context.c  app_context.h  audio.c  audio.h  audio_player.c  config.h  idf_component.yml  keypad.c  keypad.h  lcd.c  lcd.h  main.c  mp3_metadata.c  mp3_metadata.h  playlist.c  playlist.h  sdcard.c  sdcard.h  ui_player.c  ui_player.h
main/include/: app_context.h  audio_player.h  config.h  mp3_metadata.h  ui_player.h
